# upwork_scraper

./: README.md  dockerfile  pyproject.toml  requirements.txt
argyle_upwork/: driver.py  homepage_scanner.py  logger.py  login_manager.py  main.py  profile_scanner.py
argyle_upwork/models/: contact_section.py  job.py  location_section.py  profile.py  profile_section.py
argyle_upwork/tests/: test_driver.py  test_job.py  test_profile.py
data/: homepage-2023-11-13 14:00:00.json  profilepage-2023-11-13 14:00:00.json
upwork_scraper/: driver.py  homepage_scanner.py  logger.py  login_manager.py  main.py  profile_scanner.py
upwork_scraper/models/: profile.py
upwork_scraper/tests/: test_driver.py  test_job.py  test_profile.py
